fix: correção de digitação no arquivo java-ci-workflow.yaml

--- a/.github/workflow/java-ci-workflow.yaml
+++ b/.github/workflow/java-ci-workflow.yaml
@@ -2,7 +2,7 @@ name: build
 on: [push]
 
 jobs:
-  check-applicarion:
+  check-application:
     name: Build and Run Tests
     runs-on: ubuntu-latest
     steps:
