--- a/.github/workflow/java-ci-workflow.yaml
+++ b/.github/workflow/java-ci-workflow.yaml
@@ -1,6 +1,5 @@
 name: build
 on: [push]
-
 jobs:
   check-application:
     name: Build and Run Tests
@@ -11,7 +10,7 @@ jobs:
       - name: Build and Run Tests
         run: # execute your tests generating test results
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v2
+        uses: action-junit-report@v2
         if: success() || failure() # always run even if the previous step fails
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
